examples/test/testpolicy1671.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1671
  namespace: namespace49
spec:
  podSelector:
    matchLabels:
      key3: value41
      key43: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value34
          key16: value2
      podSelector:
        matchLabels:
          key4: value24
